S302T500-412 #time 1h 50m Created backend endpoint for sale item search.  Validation on the parameters passed and connected to SearchHelper methods for query matching.  ?implement
